--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
+		"target": "ES6",
 		"allowJs": true,
 		"checkJs": true,
 		"esModuleInterop": true,
