--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@codemirror/view": "^6.34.1",
 		"codemirror": "^6.0.1",
 		"mermaid": "^11.4.0",
-		"sv": "^0.5.11"
+		"sv": "^0.5.11",
+		"svg-pan-zoom": "^3.6.2"
 	}
 }
