--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@codemirror/basic-setup": "^0.20.0",
 		"@codemirror/state": "^6.4.1",
 		"@codemirror/view": "^6.34.1",
+		"@sveltejs/adapter-static": "^3.0.6",
 		"codemirror": "^6.0.1",
 		"mermaid": "^11.4.0",
 		"sv": "^0.5.11",
